--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone Disney+</title>
+    <link rel="shortcut icon" href="dist/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
@@ -44,9 +45,9 @@
                     <span class="text--small">R$45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/images/logos/disney_star_plus.png" alt="Disney+ -Star+ - combo+">
+                    <img src="./dist/images/logos/disney_star_plus_starzplay.png" alt="Disney+ -Star+ - combo+">
                     <button class="button">Assine agora</button>
-                    <span class="text--small">R$45,90/mês*</span>
+                    <span class="text--small">R$55,90/mês*</span>
                 </li>
             </ul>
             <p class="text--small">
@@ -62,8 +63,8 @@
             <button data-tab-button="populares" class="shows__tabs__button">
                 Mais populares
             </button>
-            <button data-tab-button="start_plus" class="shows__tabs__button">
-                Mais do Start+
+            <button data-tab-button="star_plus" class="shows__tabs__button">
+                Mais do Star+
             </button>
         </nav>
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
@@ -106,7 +107,7 @@
                 <img src="./dist/images/mais_populares/tudo_igual_sqn.jpg" alt="">
             </li>
         </ul>
-        <ul data-tab-id="start_plus" class="shows__list">
+        <ul data-tab-id="star_plus" class="shows__list">
             <li class="shows__list__item">
                 <img src="./dist/images/mais_no_star_plus/belair.jpg" alt="">
             </li>
